feat(homepage): replace DeepSeek card with OpenAI Audio TTS; update i18n and structured data; refresh SEO texts

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,11 +50,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="AISTONE - Best free AI image generator 2025. Powered by advanced models (FLUX, Turbo, Kontext, DeepSeek). Create stunning AI art from text. No registration, completely free. Chinese AI image generator 中文AI绘画工具."
+      content="AISTONE - Best free AI image generator 2025. Powered by advanced models (FLUX, Turbo, Kontext) and OpenAI Audio TTS. Create stunning AI art and natural speech from text. No registration, completely free. Chinese AI image generator 中文AI绘画工具."
     />
     <meta
       name="keywords"
-      content="AISTONE, AI image generator, free AI art, text to image, AI art generation, FLUX model, DeepSeek, Kontext, Turbo, free AI tools, AI creation platform, Chinese AI generator, AI绘画工具, 免费AI图片生成器, Pollinations.AI"
+      content="AISTONE, AI image generator, free AI art, text to image, AI art generation, FLUX model, Kontext, Turbo, OpenAI Audio TTS, free AI tools, AI creation platform, Chinese AI generator, AI绘画工具, 免费AI图片生成器, Pollinations.AI"
     />
     <title>AISTONE - Free AI Image Generator | Best AI Art Platform 2025 | AI绘画工具</title>
 
@@ -67,7 +67,7 @@
     />
     <meta
       property="og:description"
-      content="Best free AI image generator platform powered by FLUX, Turbo, Kontext, DeepSeek. Create stunning AI art from text. No registration, completely free. Chinese AI generator support."
+      content="Best free AI image generator platform powered by FLUX, Turbo, Kontext, plus OpenAI Audio TTS. Create stunning AI art and natural voice from text. No registration, completely free. Chinese AI generator support."
     />
     <meta property="og:image" content="https://aistone.org/assets/logo.svg" />
     <meta property="og:site_name" content="AISTONE" />
@@ -83,7 +83,7 @@
     />
     <meta
       property="twitter:description"
-      content="Best free AI image generator platform powered by FLUX, Turbo, Kontext, DeepSeek. Create stunning AI art from text."
+      content="Best free AI image generator platform powered by FLUX, Turbo, Kontext, and OpenAI Audio TTS. Create stunning AI art and voice from text."
     />
     <meta property="twitter:image" content="https://aistone.org/assets/logo.svg" />
     <meta property="twitter:site" content="@aistone_ai" />
@@ -159,7 +159,7 @@
         "@type": "WebSite",
         "name": "AISTONE - AI Image Generator",
         "url": "https://aistone.org",
-        "description": "Best Free AI Image Generator 2025 powered by Pollinations.AI technology. Features Kontext, FLUX, Turbo, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis. Perfect for designers, content creators, marketers, ecommerce. Chinese AI image generator, AI绘画工具中文版. High-quality AI image generation tools. 免费AI图片生成器，基于Pollinations.AI技术。",
+        "description": "Best Free AI Image Generator 2025 powered by Pollinations.AI technology. Features Kontext, FLUX, Turbo image models and OpenAI Audio TTS. Create stunning AI art and natural speech from text. Perfect for designers, content creators, marketers, ecommerce. Chinese AI image generator, AI绘画工具中文版. High-quality AI image generation tools. 免费AI图片生成器，基于Pollinations.AI技术。",
         "inLanguage": ["en", "zh-CN"],
         "potentialAction": {
           "@type": "SearchAction",
@@ -215,7 +215,7 @@
         "@context": "https://schema.org",
         "@type": "ItemList",
         "name": "AI Models Supported by AISTONE",
-        "description": "Advanced AI image generation models supported by AISTONE platform",
+        "description": "Advanced AI image generation and voice synthesis models supported by AISTONE platform",
         "itemListElement": [
           {
             "@type": "ListItem",
@@ -244,8 +244,8 @@
           {
             "@type": "ListItem",
             "position": 5,
-            "name": "DeepSeek",
-            "description": "AI model that excels in Chinese understanding and image generation"
+            "name": "OpenAI Audio TTS",
+            "description": "Text-to-Speech voices: Nova, Alloy, Echo, Fable, Onyx, Shimmer"
           }
         ]
       }
@@ -275,7 +275,7 @@
           {
             "@type": "HowToStep",
             "name": "Select AI Model",
-            "text": "Choose from advanced AI models like FLUX, Turbo, Kontext, or DeepSeek based on your needs",
+            "text": "Choose from advanced AI models like FLUX, Turbo, Kontext for images, or OpenAI Audio TTS for voice, based on your needs",
             "image": "https://aistone.org/assets/logo.svg"
           },
           {
@@ -313,7 +313,7 @@
             "name": "What AI models are supported?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Powered by Pollinations.AI technology, supports Kontext, FLUX, Turbo and DeepSeek advanced AI models for high-quality image generation. Chinese AI image generator with AI绘画工具中文版 support."
+              "text": "Powered by Pollinations.AI technology, supports Kontext, FLUX, Turbo for image generation, and OpenAI Audio TTS for voice synthesis. Chinese AI image generator with AI绘画工具中文版 support."
             }
           },
           {
@@ -434,8 +434,8 @@
           "
         >
           <span data-i18n="heroDescription">
-            基于先进的Pollinations.AI技术，支持FLUX、Turbo、Kontext、DeepSeek等多种AI模型。
-            无需注册，永久免费，支持中英文输入，专为创作者优化。
+            基于先进的Pollinations.AI技术，支持FLUX、Turbo、Kontext等图像模型与OpenAI Audio
+            TTS语音合成。 无需注册，永久免费，支持中英文输入，专为创作者优化。
           </span>
         </div>
         <div class="hero-tags" style="margin-top: 12px">
@@ -635,7 +635,7 @@
                   color: var(--color-brand-primary, #007bff);
                 "
               >
-                🐲
+                🎙️
               </div>
               <h3
                 style="
@@ -644,7 +644,7 @@
                   font-weight: 600;
                 "
               >
-                DeepSeek Model
+                OpenAI Audio TTS
               </h3>
               <p
                 style="
@@ -652,9 +652,9 @@
                   font-size: 0.9em;
                   line-height: 1.5;
                 "
-                data-i18n="deepseekModelDesc"
+                data-i18n="openaiAudioModelDesc"
               >
-                专为中文优化的AI模型，深度理解中文语义，特别适合中文创作
+                OpenAI Audio 语音合成（TTS），提供多种专业音色，发音自然流畅
               </p>
             </div>
           </div>
@@ -1520,7 +1520,8 @@
                 "
                 data-i18n="step2Desc"
               >
-                根据需求选择FLUX、Turbo、Kontext或DeepSeek模型，每个模型都有独特优势
+                根据需求选择FLUX、Turbo、Kontext图像模型，或选择OpenAI Audio
+                TTS用于语音，每个模型都有独特优势
               </p>
             </div>
 
@@ -1669,7 +1670,7 @@
                   style="font-size: 1em; opacity: 0.9; line-height: 1.6"
                   data-i18n="aboutImageDesc"
                 >
-                  基于FLUX、Turbo、Kontext、DeepSeek等先进模型，支持多种艺术风格，
+                  基于FLUX、Turbo、Kontext等先进模型，支持多种艺术风格，
                   从写实摄影到抽象艺术，满足各种创作需求
                 </p>
               </div>
