feat(privacy): add full English translations alongside Chinese; breadcrumb/footer bilingual; styling for translations

--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -47,11 +47,18 @@
           <a href="/">首页</a>
           <span class="separator">></span>
           <span class="current">隐私政策</span>
+          <div class="en-translation" lang="en" aria-label="Breadcrumb">
+            <a href="/">Home</a>
+            <span class="separator">></span>
+            <span class="current">Privacy Policy</span>
+          </div>
         </nav>
 
         <h1>隐私政策</h1>
+        <p class="en-translation h1-translation" lang="en">Privacy Policy</p>
         <div class="privacy-content">
           <p class="last-updated">最后更新时间：2025年9月6日</p>
+          <p class="last-updated en-translation" lang="en">Last Updated: September 6, 2025</p>
 
           <section>
             <h2>1. 信息收集</h2>
@@ -60,6 +67,25 @@
               <li><strong>自动收集的信息：</strong>IP地址、浏览器类型、访问时间等技术信息</li>
               <li><strong>用户提供的信息：</strong>您在使用我们服务时主动提供的文本内容</li>
               <li><strong>Cookie信息：</strong>用于改善用户体验的必要Cookie</li>
+            </ul>
+            <h3 class="en-translation-title" lang="en">1. Information Collection</h3>
+            <p class="en-translation" lang="en">
+              AISTONE is committed to protecting user privacy. We collect the following types of
+              information:
+            </p>
+            <ul class="en-translation" lang="en">
+              <li>
+                <strong>Automatically Collected Information:</strong> Technical data such as IP
+                address, browser type, and access time.
+              </li>
+              <li>
+                <strong>User-Provided Information:</strong> Text content you voluntarily provide
+                when using our services.
+              </li>
+              <li>
+                <strong>Cookie Information:</strong> Necessary cookies used to improve your
+                experience.
+              </li>
             </ul>
           </section>
 
@@ -72,6 +98,14 @@
               <li>进行必要的安全监控和防护</li>
               <li>遵守法律法规要求</li>
             </ul>
+            <h3 class="en-translation-title" lang="en">2. Use of Information</h3>
+            <p class="en-translation" lang="en">We use the collected information to:</p>
+            <ul class="en-translation" lang="en">
+              <li>Provide AI image generation and voice synthesis services.</li>
+              <li>Improve service quality and user experience.</li>
+              <li>Conduct necessary security monitoring and protection.</li>
+              <li>Comply with legal and regulatory requirements.</li>
+            </ul>
           </section>
 
           <section>
@@ -82,6 +116,25 @@
               <li><strong>加密传输：</strong>所有数据传输均采用HTTPS加密</li>
               <li><strong>访问控制：</strong>严格限制对用户数据的访问权限</li>
               <li><strong>定期审计：</strong>定期进行安全审计和漏洞检测</li>
+            </ul>
+            <h3 class="en-translation-title" lang="en">3. Data Security</h3>
+            <p class="en-translation" lang="en">
+              We protect your data through the following measures:
+            </p>
+            <ul class="en-translation" lang="en">
+              <li>
+                <strong>Zero-storage Policy:</strong> User-generated content is not stored on our
+                servers for the long term.
+              </li>
+              <li>
+                <strong>Encrypted Transmission:</strong> All data is transmitted over HTTPS
+                encryption.
+              </li>
+              <li><strong>Access Control:</strong> Strictly limited access to user data.</li>
+              <li>
+                <strong>Regular Audits:</strong> Periodic security reviews and vulnerability
+                scanning.
+              </li>
             </ul>
           </section>
 
@@ -95,6 +148,22 @@
               <li><strong>Google AdSense：</strong>用于展示广告（如适用）</li>
             </ul>
             <p>这些第三方服务有各自的隐私政策，我们建议您仔细阅读。</p>
+            <h3 class="en-translation-title" lang="en">4. Third-Party Services</h3>
+            <p class="en-translation" lang="en">
+              Our services integrate the following third-party providers:
+            </p>
+            <ul class="en-translation" lang="en">
+              <li>
+                <strong>Pollinations AI:</strong> Provides image and voice generation technology.
+              </li>
+              <li><strong>DeepSeek AI:</strong> Provides prompt optimization services.</li>
+              <li><strong>Google Analytics:</strong> Website analytics (where applicable).</li>
+              <li><strong>Google AdSense:</strong> Advertising display (where applicable).</li>
+            </ul>
+            <p class="en-translation" lang="en">
+              Each third-party service has its own privacy policy. We recommend that you read them
+              carefully.
+            </p>
           </section>
 
           <section>
@@ -107,6 +176,18 @@
               <li>展示相关广告（如适用）</li>
             </ul>
             <p>您可以通过浏览器设置管理Cookie，但这可能影响网站的正常功能。</p>
+            <h3 class="en-translation-title" lang="en">5. Cookie Policy</h3>
+            <p class="en-translation" lang="en">We use cookies to:</p>
+            <ul class="en-translation" lang="en">
+              <li>Remember your language preferences.</li>
+              <li>Analyze website usage.</li>
+              <li>Provide a personalized experience.</li>
+              <li>Display relevant ads (where applicable).</li>
+            </ul>
+            <p class="en-translation" lang="en">
+              You can manage cookies via your browser settings, but this may affect normal site
+              functionality.
+            </p>
           </section>
 
           <section>
@@ -119,6 +200,22 @@
               <li>删除权：在特定情况下请求删除您的个人信息</li>
               <li>反对权：反对我们处理您的个人信息</li>
             </ul>
+            <h3 class="en-translation-title" lang="en">6. Your Rights</h3>
+            <p class="en-translation" lang="en">
+              Under applicable data protection laws, you may have the following rights:
+            </p>
+            <ul class="en-translation" lang="en">
+              <li>Right to be Informed: Understand how we process your personal information.</li>
+              <li>Right of Access: Request access to personal information we hold about you.</li>
+              <li>
+                Right to Rectification: Request correction of inaccurate personal information.
+              </li>
+              <li>
+                Right to Erasure: Request deletion of your personal information in certain
+                circumstances.
+              </li>
+              <li>Right to Object: Object to our processing of your personal information.</li>
+            </ul>
           </section>
 
           <section>
@@ -126,12 +223,24 @@
             <p>
               我们的服务不针对13岁以下的儿童。我们不会故意收集13岁以下儿童的个人信息。如果我们发现收集了此类信息，将立即删除。
             </p>
+            <h3 class="en-translation-title" lang="en">7. Children's Privacy</h3>
+            <p class="en-translation" lang="en">
+              Our services are not directed to children under the age of 13. We do not knowingly
+              collect personal information from children under 13. If we discover such information
+              has been collected, we will delete it immediately.
+            </p>
           </section>
 
           <section>
             <h2>8. 政策更新</h2>
             <p>
               我们可能会不时更新本隐私政策。重大变更将通过网站公告或其他适当方式通知用户。继续使用我们的服务表示您接受更新后的政策。
+            </p>
+            <h3 class="en-translation-title" lang="en">8. Policy Updates</h3>
+            <p class="en-translation" lang="en">
+              We may update this Privacy Policy from time to time. Material changes will be
+              communicated through website notices or other appropriate means. Your continued use of
+              our services indicates your acceptance of the updated policy.
             </p>
           </section>
 
@@ -141,6 +250,15 @@
             <ul>
               <li>邮箱：privacy@aistone.org</li>
               <li>网站：<a href="contact.html">联系我们页面</a></li>
+            </ul>
+            <h3 class="en-translation-title" lang="en">9. Contact Us</h3>
+            <p class="en-translation" lang="en">
+              If you have any questions about this Privacy Policy or wish to exercise your rights,
+              please contact us via:
+            </p>
+            <ul class="en-translation" lang="en">
+              <li>Email: privacy@aistone.org</li>
+              <li>Website: <a href="contact.html">Contact Us page</a></li>
             </ul>
           </section>
 
@@ -165,10 +283,16 @@
     <footer>
       <div class="container">
         <p>&copy; 2024 AISTONE. 保留所有权利。</p>
+        <p class="en-translation" lang="en">&copy; 2024 AISTONE. All rights reserved.</p>
         <div class="footer-links">
           <a href="privacy.html">隐私政策</a>
           <a href="terms.html">使用条款</a>
           <a href="contact.html">联系我们</a>
+          <div class="en-translation" lang="en" style="margin-top: 6px">
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html" style="margin-left: 15px">Terms of Service</a>
+            <a href="contact.html" style="margin-left: 15px">Contact Us</a>
+          </div>
         </div>
       </div>
     </footer>
@@ -208,6 +332,25 @@
       .privacy-content li {
         color: var(--color-text-on-light-muted, #666);
         margin-bottom: 10px;
+      }
+
+      /* English translation styles */
+      .en-translation {
+        color: var(--color-text-on-light, #444);
+        margin: 6px 0 10px 0;
+      }
+
+      .en-translation-title {
+        color: var(--color-accent-blue, #4a90e2);
+        margin-top: 10px;
+        margin-bottom: 8px;
+        font-size: 1.15em;
+      }
+
+      .h1-translation {
+        text-align: center;
+        font-size: 1.25em;
+        color: var(--color-text-on-light-strong, #333);
       }
 
       .privacy-content ul {
