--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -24,241 +24,148 @@
     ></script>
   </head>
   <body>
-    <header>
-      <nav>
-        <div class="nav-container">
-          <div class="logo">
-            <a href="/">AISTONE</a>
-          </div>
-          <ul class="nav-menu">
-            <li><a href="/">首页</a></li>
-            <li><a href="about.html">关于我们</a></li>
-            <li><a href="services.html">服务</a></li>
-            <li><a href="contact.html">联系我们</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+    <!-- 统一站点导航（与首页一致） -->
+    <nav class="navbar">
+      <div class="navbar-left">
+        <img src="assets/logo.svg" alt="AISTONE LOGO" class="logo-img" />
+        <span class="site-name">AISTONE</span>
+      </div>
+      <ul class="navbar-menu">
+        <li><a href="index.html" class="navbar-link" data-i18n="navHome">首页</a></li>
+        <li>
+          <a href="image-generator.html" class="navbar-link" data-i18n="navImageGen">图像生成</a>
+        </li>
+        <li><a href="voice.html" class="navbar-link" data-i18n="navVoice">语音合成</a></li>
+        <li><a href="services.html" class="navbar-link" data-i18n="navServices">服务</a></li>
+        <li><a href="about.html" class="navbar-link" data-i18n="navAbout">关于</a></li>
+        <li><a href="contact.html" class="navbar-link" data-i18n="navContact">联系</a></li>
+      </ul>
+      <div class="navbar-right">
+        <select id="lang-select" class="lang-select" aria-label="选择语言">
+          <option value="zh">中文</option>
+          <option value="en">English</option>
+        </select>
+      </div>
+    </nav>
 
     <main class="privacy-page">
       <div class="container">
         <!-- 面包屑导航 -->
         <nav class="breadcrumb">
-          <a href="/">首页</a>
+          <a href="/" data-i18n="breadcrumbHome">首页</a>
           <span class="separator">></span>
-          <span class="current">隐私政策</span>
-          <div class="en-translation" lang="en" aria-label="Breadcrumb">
-            <a href="/">Home</a>
-            <span class="separator">></span>
-            <span class="current">Privacy Policy</span>
-          </div>
+          <span class="current" data-i18n="privacyBreadcrumb">隐私政策</span>
         </nav>
 
-        <h1>隐私政策</h1>
-        <p class="en-translation h1-translation" lang="en">Privacy Policy</p>
+        <h1 data-i18n="privacyTitle">隐私政策</h1>
         <div class="privacy-content">
-          <p class="last-updated">最后更新时间：2025年9月6日</p>
-          <p class="last-updated en-translation" lang="en">Last Updated: September 6, 2025</p>
+          <p class="last-updated" data-i18n="privacyLastUpdated">最后更新时间：2025年9月6日</p>
 
           <section>
-            <h2>1. 信息收集</h2>
-            <p>AISTONE致力于保护用户隐私。我们收集的信息类型包括：</p>
-            <ul>
-              <li><strong>自动收集的信息：</strong>IP地址、浏览器类型、访问时间等技术信息</li>
-              <li><strong>用户提供的信息：</strong>您在使用我们服务时主动提供的文本内容</li>
-              <li><strong>Cookie信息：</strong>用于改善用户体验的必要Cookie</li>
-            </ul>
-            <h3 class="en-translation-title" lang="en">1. Information Collection</h3>
-            <p class="en-translation" lang="en">
-              AISTONE is committed to protecting user privacy. We collect the following types of
-              information:
+            <h2 data-i18n="privacySection1Title">1. 信息收集</h2>
+            <p data-i18n="privacySection1Intro">
+              AISTONE致力于保护用户隐私。我们收集的信息类型包括：
             </p>
-            <ul class="en-translation" lang="en">
-              <li>
-                <strong>Automatically Collected Information:</strong> Technical data such as IP
-                address, browser type, and access time.
+            <ul>
+              <li data-i18n="privacySection1Item1">
+                自动收集的信息：IP地址、浏览器类型、访问时间等技术信息
               </li>
-              <li>
-                <strong>User-Provided Information:</strong> Text content you voluntarily provide
-                when using our services.
+              <li data-i18n="privacySection1Item2">
+                用户提供的信息：您在使用我们服务时主动提供的文本内容
               </li>
-              <li>
-                <strong>Cookie Information:</strong> Necessary cookies used to improve your
-                experience.
-              </li>
+              <li data-i18n="privacySection1Item3">Cookie信息：用于改善用户体验的必要Cookie</li>
             </ul>
           </section>
 
           <section>
-            <h2>2. 信息使用</h2>
-            <p>我们使用收集的信息用于：</p>
+            <h2 data-i18n="privacySection2Title">2. 信息使用</h2>
+            <p data-i18n="privacySection2Intro">我们使用收集的信息用于：</p>
             <ul>
-              <li>提供AI图片生成和语音合成服务</li>
-              <li>改善服务质量和用户体验</li>
-              <li>进行必要的安全监控和防护</li>
-              <li>遵守法律法规要求</li>
-            </ul>
-            <h3 class="en-translation-title" lang="en">2. Use of Information</h3>
-            <p class="en-translation" lang="en">We use the collected information to:</p>
-            <ul class="en-translation" lang="en">
-              <li>Provide AI image generation and voice synthesis services.</li>
-              <li>Improve service quality and user experience.</li>
-              <li>Conduct necessary security monitoring and protection.</li>
-              <li>Comply with legal and regulatory requirements.</li>
+              <li data-i18n="privacySection2Item1">提供AI图片生成和语音合成服务</li>
+              <li data-i18n="privacySection2Item2">改善服务质量和用户体验</li>
+              <li data-i18n="privacySection2Item3">进行必要的安全监控和防护</li>
+              <li data-i18n="privacySection2Item4">遵守法律法规要求</li>
             </ul>
           </section>
 
           <section>
-            <h2>3. 数据安全</h2>
-            <p>我们采用以下措施保护您的数据安全：</p>
+            <h2 data-i18n="privacySection3Title">3. 数据安全</h2>
+            <p data-i18n="privacySection3Intro">我们采用以下措施保护您的数据安全：</p>
             <ul>
-              <li><strong>零存储政策：</strong>用户生成的内容不会在我们的服务器上长期存储</li>
-              <li><strong>加密传输：</strong>所有数据传输均采用HTTPS加密</li>
-              <li><strong>访问控制：</strong>严格限制对用户数据的访问权限</li>
-              <li><strong>定期审计：</strong>定期进行安全审计和漏洞检测</li>
-            </ul>
-            <h3 class="en-translation-title" lang="en">3. Data Security</h3>
-            <p class="en-translation" lang="en">
-              We protect your data through the following measures:
-            </p>
-            <ul class="en-translation" lang="en">
-              <li>
-                <strong>Zero-storage Policy:</strong> User-generated content is not stored on our
-                servers for the long term.
+              <li data-i18n="privacySection3Item1">
+                零存储政策：用户生成的内容不会在我们的服务器上长期存储
               </li>
-              <li>
-                <strong>Encrypted Transmission:</strong> All data is transmitted over HTTPS
-                encryption.
-              </li>
-              <li><strong>Access Control:</strong> Strictly limited access to user data.</li>
-              <li>
-                <strong>Regular Audits:</strong> Periodic security reviews and vulnerability
-                scanning.
-              </li>
+              <li data-i18n="privacySection3Item2">加密传输：所有数据传输均采用HTTPS加密</li>
+              <li data-i18n="privacySection3Item3">访问控制：严格限制对用户数据的访问权限</li>
+              <li data-i18n="privacySection3Item4">定期审计：定期进行安全审计和漏洞检测</li>
             </ul>
           </section>
 
           <section>
-            <h2>4. 第三方服务</h2>
-            <p>我们的服务集成了以下第三方服务：</p>
+            <h2 data-i18n="privacySection4Title">4. 第三方服务</h2>
+            <p data-i18n="privacySection4Intro">我们的服务集成了以下第三方服务：</p>
             <ul>
-              <li><strong>Pollinations AI：</strong>提供图片和语音生成技术</li>
-              <li><strong>DeepSeek AI：</strong>提供提示词优化服务</li>
-              <li><strong>Google Analytics：</strong>用于网站分析（如适用）</li>
-              <li><strong>Google AdSense：</strong>用于展示广告（如适用）</li>
+              <li data-i18n="privacySection4Item1">Pollinations AI：提供图片和语音生成技术</li>
+              <li data-i18n="privacySection4Item2">DeepSeek AI：提供提示词优化服务</li>
+              <li data-i18n="privacySection4Item3">Google Analytics：用于网站分析（如适用）</li>
+              <li data-i18n="privacySection4Item4">Google AdSense：用于展示广告（如适用）</li>
             </ul>
-            <p>这些第三方服务有各自的隐私政策，我们建议您仔细阅读。</p>
-            <h3 class="en-translation-title" lang="en">4. Third-Party Services</h3>
-            <p class="en-translation" lang="en">
-              Our services integrate the following third-party providers:
-            </p>
-            <ul class="en-translation" lang="en">
-              <li>
-                <strong>Pollinations AI:</strong> Provides image and voice generation technology.
-              </li>
-              <li><strong>DeepSeek AI:</strong> Provides prompt optimization services.</li>
-              <li><strong>Google Analytics:</strong> Website analytics (where applicable).</li>
-              <li><strong>Google AdSense:</strong> Advertising display (where applicable).</li>
-            </ul>
-            <p class="en-translation" lang="en">
-              Each third-party service has its own privacy policy. We recommend that you read them
-              carefully.
+            <p data-i18n="privacySection4Note">
+              这些第三方服务有各自的隐私政策，我们建议您仔细阅读。
             </p>
           </section>
 
           <section>
-            <h2>5. Cookie政策</h2>
-            <p>我们使用Cookie来：</p>
+            <h2 data-i18n="privacySection5Title">5. Cookie政策</h2>
+            <p data-i18n="privacySection5Intro">我们使用Cookie来：</p>
             <ul>
-              <li>记住您的语言偏好设置</li>
-              <li>分析网站使用情况</li>
-              <li>提供个性化的用户体验</li>
-              <li>展示相关广告（如适用）</li>
+              <li data-i18n="privacySection5Item1">记住您的语言偏好设置</li>
+              <li data-i18n="privacySection5Item2">分析网站使用情况</li>
+              <li data-i18n="privacySection5Item3">提供个性化的用户体验</li>
+              <li data-i18n="privacySection5Item4">展示相关广告（如适用）</li>
             </ul>
-            <p>您可以通过浏览器设置管理Cookie，但这可能影响网站的正常功能。</p>
-            <h3 class="en-translation-title" lang="en">5. Cookie Policy</h3>
-            <p class="en-translation" lang="en">We use cookies to:</p>
-            <ul class="en-translation" lang="en">
-              <li>Remember your language preferences.</li>
-              <li>Analyze website usage.</li>
-              <li>Provide a personalized experience.</li>
-              <li>Display relevant ads (where applicable).</li>
-            </ul>
-            <p class="en-translation" lang="en">
-              You can manage cookies via your browser settings, but this may affect normal site
-              functionality.
+            <p data-i18n="privacySection5Note">
+              您可以通过浏览器设置管理Cookie，但这可能影响网站的正常功能。
             </p>
           </section>
 
           <section>
-            <h2>6. 用户权利</h2>
-            <p>根据适用的数据保护法律，您享有以下权利：</p>
+            <h2 data-i18n="privacySection6Title">6. 用户权利</h2>
+            <p data-i18n="privacySection6Intro">根据适用的数据保护法律，您享有以下权利：</p>
             <ul>
-              <li>知情权：了解我们如何处理您的个人信息</li>
-              <li>访问权：请求访问我们持有的您的个人信息</li>
-              <li>更正权：请求更正不准确的个人信息</li>
-              <li>删除权：在特定情况下请求删除您的个人信息</li>
-              <li>反对权：反对我们处理您的个人信息</li>
-            </ul>
-            <h3 class="en-translation-title" lang="en">6. Your Rights</h3>
-            <p class="en-translation" lang="en">
-              Under applicable data protection laws, you may have the following rights:
-            </p>
-            <ul class="en-translation" lang="en">
-              <li>Right to be Informed: Understand how we process your personal information.</li>
-              <li>Right of Access: Request access to personal information we hold about you.</li>
-              <li>
-                Right to Rectification: Request correction of inaccurate personal information.
-              </li>
-              <li>
-                Right to Erasure: Request deletion of your personal information in certain
-                circumstances.
-              </li>
-              <li>Right to Object: Object to our processing of your personal information.</li>
+              <li data-i18n="privacySection6Item1">知情权：了解我们如何处理您的个人信息</li>
+              <li data-i18n="privacySection6Item2">访问权：请求访问我们持有的您的个人信息</li>
+              <li data-i18n="privacySection6Item3">更正权：请求更正不准确的个人信息</li>
+              <li data-i18n="privacySection6Item4">删除权：在特定情况下请求删除您的个人信息</li>
+              <li data-i18n="privacySection6Item5">反对权：反对我们处理您的个人信息</li>
             </ul>
           </section>
 
           <section>
-            <h2>7. 儿童隐私</h2>
-            <p>
+            <h2 data-i18n="privacySection7Title">7. 儿童隐私</h2>
+            <p data-i18n="privacySection7Intro">
               我们的服务不针对13岁以下的儿童。我们不会故意收集13岁以下儿童的个人信息。如果我们发现收集了此类信息，将立即删除。
             </p>
-            <h3 class="en-translation-title" lang="en">7. Children's Privacy</h3>
-            <p class="en-translation" lang="en">
-              Our services are not directed to children under the age of 13. We do not knowingly
-              collect personal information from children under 13. If we discover such information
-              has been collected, we will delete it immediately.
-            </p>
           </section>
 
           <section>
-            <h2>8. 政策更新</h2>
-            <p>
+            <h2 data-i18n="privacySection8Title">8. 政策更新</h2>
+            <p data-i18n="privacySection8Intro">
               我们可能会不时更新本隐私政策。重大变更将通过网站公告或其他适当方式通知用户。继续使用我们的服务表示您接受更新后的政策。
             </p>
-            <h3 class="en-translation-title" lang="en">8. Policy Updates</h3>
-            <p class="en-translation" lang="en">
-              We may update this Privacy Policy from time to time. Material changes will be
-              communicated through website notices or other appropriate means. Your continued use of
-              our services indicates your acceptance of the updated policy.
-            </p>
           </section>
 
           <section>
-            <h2>9. 联系我们</h2>
-            <p>如果您对本隐私政策有任何疑问或需要行使您的权利，请通过以下方式联系我们：</p>
-            <ul>
-              <li>邮箱：privacy@aistone.org</li>
-              <li>网站：<a href="contact.html">联系我们页面</a></li>
-            </ul>
-            <h3 class="en-translation-title" lang="en">9. Contact Us</h3>
-            <p class="en-translation" lang="en">
-              If you have any questions about this Privacy Policy or wish to exercise your rights,
-              please contact us via:
+            <h2 data-i18n="privacySection9Title">9. 联系我们</h2>
+            <p data-i18n="privacySection9Intro">
+              如果您对本隐私政策有任何疑问或需要行使您的权利，请通过以下方式联系我们：
             </p>
-            <ul class="en-translation" lang="en">
-              <li>Email: privacy@aistone.org</li>
-              <li>Website: <a href="contact.html">Contact Us page</a></li>
+            <ul>
+              <li data-i18n="privacySection9Item1">邮箱：privacy@aistone.org</li>
+              <li>
+                <span data-i18n="privacySection9Item2">网站：联系我们页面</span>
+                （<a href="contact.html" data-i18n="contactUs">联系我们</a>）
+              </li>
             </ul>
           </section>
 
@@ -283,16 +190,10 @@
     <footer>
       <div class="container">
         <p>&copy; 2024 AISTONE. 保留所有权利。</p>
-        <p class="en-translation" lang="en">&copy; 2024 AISTONE. All rights reserved.</p>
         <div class="footer-links">
-          <a href="privacy.html">隐私政策</a>
-          <a href="terms.html">使用条款</a>
-          <a href="contact.html">联系我们</a>
-          <div class="en-translation" lang="en" style="margin-top: 6px">
-            <a href="privacy.html">Privacy Policy</a>
-            <a href="terms.html" style="margin-left: 15px">Terms of Service</a>
-            <a href="contact.html" style="margin-left: 15px">Contact Us</a>
-          </div>
+          <a href="privacy.html" data-i18n="privacyPolicy">隐私政策</a>
+          <a href="terms.html" data-i18n="termsOfService">使用条款</a>
+          <a href="contact.html" data-i18n="contactUs">联系我们</a>
         </div>
       </div>
     </footer>
@@ -334,25 +235,6 @@
         margin-bottom: 10px;
       }
 
-      /* English translation styles */
-      .en-translation {
-        color: var(--color-text-on-light, #444);
-        margin: 6px 0 10px 0;
-      }
-
-      .en-translation-title {
-        color: var(--color-accent-blue, #4a90e2);
-        margin-top: 10px;
-        margin-bottom: 8px;
-        font-size: 1.15em;
-      }
-
-      .h1-translation {
-        text-align: center;
-        font-size: 1.25em;
-        color: var(--color-text-on-light-strong, #333);
-      }
-
       .privacy-content ul {
         margin-left: 20px;
         margin-bottom: 20px;
@@ -390,5 +272,8 @@
         text-decoration: underline;
       }
     </style>
+
+    <!-- 加载 i18n 与必要脚本（与首页保持一致以启用语言切换） -->
+    <script src="js/i18n.js?v=20250924"></script>
   </body>
 </html>
