--- a/frontend/terms.html
+++ b/frontend/terms.html
@@ -24,195 +24,205 @@
     ></script>
   </head>
   <body>
-    <header>
-      <nav>
-        <div class="nav-container">
-          <div class="logo">
-            <a href="/">AISTONE</a>
-          </div>
-          <ul class="nav-menu">
-            <li><a href="/">首页</a></li>
-            <li><a href="about.html">关于我们</a></li>
-            <li><a href="services.html">服务</a></li>
-            <li><a href="contact.html">联系我们</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+    <!-- 统一站点导航（与首页一致） -->
+    <nav class="navbar">
+      <div class="navbar-left">
+        <img src="assets/logo.svg" alt="AISTONE LOGO" class="logo-img" />
+        <span class="site-name">AISTONE</span>
+      </div>
+      <ul class="navbar-menu">
+        <li><a href="index.html" class="navbar-link" data-i18n="navHome">首页</a></li>
+        <li>
+          <a href="image-generator.html" class="navbar-link" data-i18n="navImageGen">图像生成</a>
+        </li>
+        <li><a href="voice.html" class="navbar-link" data-i18n="navVoice">语音合成</a></li>
+        <li><a href="services.html" class="navbar-link" data-i18n="navServices">服务</a></li>
+        <li><a href="about.html" class="navbar-link" data-i18n="navAbout">关于</a></li>
+        <li><a href="contact.html" class="navbar-link" data-i18n="navContact">联系</a></li>
+      </ul>
+      <div class="navbar-right">
+        <select id="lang-select" class="lang-select" aria-label="选择语言">
+          <option value="zh">中文</option>
+          <option value="en">English</option>
+        </select>
+      </div>
+    </nav>
 
     <main class="terms-page">
       <div class="container">
         <!-- 面包屑导航 -->
         <nav class="breadcrumb">
-          <a href="/">首页</a>
+          <a href="/" data-i18n="breadcrumbHome">首页</a>
           <span class="separator">></span>
-          <span class="current">使用条款</span>
+          <span class="current" data-i18n="termsBreadcrumb">使用条款</span>
         </nav>
 
-        <h1>使用条款</h1>
+        <h1 data-i18n="termsTitle">使用条款</h1>
         <div class="terms-content">
-          <p class="last-updated">最后更新时间：2025年1月1日</p>
+          <p class="last-updated" data-i18n="termsLastUpdated">最后更新时间：2025年1月1日</p>
 
           <section>
-            <h2>1. 接受条款</h2>
+            <h2 data-i18n="termsSection1Title">1. 接受条款</h2>
+            <p data-i18n="termsSection1Intro"></p>
+          </section>
+
+          <section>
+            <h2 data-i18n="termsSection2Title">2. 服务描述</h2>
+            <p data-i18n="termsSection2Intro"></p>
+            <ul>
+              <li data-i18n="termsSection2Item1"></li>
+              <li data-i18n="termsSection2Item2"></li>
+              <li data-i18n="termsSection2Item3"></li>
+              <li data-i18n="termsSection2Item4"></li>
+              <li data-i18n="termsSection2Item5"></li>
+            </ul>
+          </section>
+
+          <section>
+            <h2 data-i18n="termsSection3Title">3. 用户资格</h2>
+            <p data-i18n="termsSection3Intro"></p>
+            <ul>
+              <li data-i18n="termsSection3Item1"></li>
+              <li data-i18n="termsSection3Item2"></li>
+              <li data-i18n="termsSection3Item3"></li>
+              <li data-i18n="termsSection3Item4"></li>
+            </ul>
+          </section>
+
+          <section>
+            <h2 data-i18n="termsSection4Title">4. 用户责任</h2>
+            <p data-i18n="termsSection4Intro"></p>
+            <ul>
+              <li data-i18n="termsSection4Item1"></li>
+              <li data-i18n="termsSection4Item2"></li>
+              <li data-i18n="termsSection4Item3"></li>
+              <li data-i18n="termsSection4Item4"></li>
+              <li data-i18n="termsSection4Item5"></li>
+            </ul>
+          </section>
+
+          <section>
+            <h2 data-i18n="termsSection5Title">5. 禁止行为</h2>
+            <p data-i18n="termsSection5Intro"></p>
+            <ul>
+              <li data-i18n="termsSection5Item1"></li>
+              <li data-i18n="termsSection5Item2"></li>
+              <li data-i18n="termsSection5Item3"></li>
+              <li data-i18n="termsSection5Item4"></li>
+              <li data-i18n="termsSection5Item5"></li>
+              <li data-i18n="termsSection5Item6"></li>
+              <li data-i18n="termsSection5Item7"></li>
+            </ul>
+          </section>
+
+          <section>
+            <h2 data-i18n="termsSection6Title">6. 内容所有权</h2>
+            <p data-i18n="termsSection6Intro"></p>
+            <ul>
+              <li data-i18n="termsSection6Item1"></li>
+              <li data-i18n="termsSection6Item2"></li>
+              <li data-i18n="termsSection6Item3"></li>
+              <li data-i18n="termsSection6Item4"></li>
+            </ul>
+          </section>
+
+          <section>
+            <h2 data-i18n="termsSection7Title">7. 服务可用性</h2>
+            <p data-i18n="termsSection7Intro"></p>
+            <ul>
+              <li data-i18n="termsSection7Item1"></li>
+              <li data-i18n="termsSection7Item2"></li>
+              <li data-i18n="termsSection7Item3"></li>
+              <li data-i18n="termsSection7Item4"></li>
+            </ul>
+          </section>
+
+          <section>
+            <h2 data-i18n="termsSection8Title">8. 隐私保护</h2>
+            <p data-i18n="termsSection8Intro"></p>
+            <ul>
+              <li data-i18n="termsSection8Item1"></li>
+              <li data-i18n="termsSection8Item2"></li>
+              <li data-i18n="termsSection8Item3"></li>
+              <li data-i18n="termsSection8Item4"></li>
+            </ul>
             <p>
-              欢迎使用AISTONE（以下简称"本平台"）提供的AI图片生成和语音合成服务。通过访问或使用本平台，您同意受本使用条款的约束。如果您不同意这些条款，请勿使用本平台。
+              <span data-i18n="termsSection8Note"></span>
+              <a href="privacy.html" data-i18n="privacyPolicy">隐私政策</a>
             </p>
           </section>
 
           <section>
-            <h2>2. 服务描述</h2>
-            <p>AISTONE是一个基于Pollinations.AI技术的AI内容生成平台，提供以下服务：</p>
+            <h2 data-i18n="termsSection9Title">9. 免责声明</h2>
+            <p data-i18n="termsSection9Intro"></p>
             <ul>
-              <li>AI图片生成功能：根据用户输入的文本描述生成高质量图片</li>
-              <li>AI语音合成功能：将文本转换为自然流畅的语音</li>
-              <li>智能提示词优化：使用DeepSeek AI优化用户输入</li>
-              <li>用户认证和个人中心功能</li>
-              <li>高清图片缓存和管理功能</li>
+              <li data-i18n="termsSection9Item1"></li>
+              <li data-i18n="termsSection9Item2"></li>
+              <li data-i18n="termsSection9Item3"></li>
+              <li data-i18n="termsSection9Item4"></li>
+              <li data-i18n="termsSection9Item5"></li>
             </ul>
           </section>
 
           <section>
-            <h2>3. 用户资格</h2>
-            <p>要使用本平台服务，您必须：</p>
+            <h2 data-i18n="termsSection10Title">10. 责任限制</h2>
+            <p data-i18n="termsSection10Intro"></p>
             <ul>
-              <li>年满13周岁</li>
-              <li>同意遵守所有适用的法律法规</li>
-              <li>提供真实、准确的注册信息（如适用）</li>
-              <li>对您的账户和密码负责（如适用）</li>
+              <li data-i18n="termsSection10Item1"></li>
+              <li data-i18n="termsSection10Item2"></li>
+              <li data-i18n="termsSection10Item3"></li>
+              <li data-i18n="termsSection10Item4"></li>
+              <li data-i18n="termsSection10Item5"></li>
             </ul>
           </section>
 
           <section>
-            <h2>4. 用户责任</h2>
-            <p>使用本平台时，您同意：</p>
+            <h2 data-i18n="termsSection11Title">11. 条款变更</h2>
+            <p data-i18n="termsSection11Intro"></p>
             <ul>
-              <li><strong>合法使用：</strong>仅将服务用于合法目的，不得用于任何违法活动</li>
-              <li><strong>内容合规：</strong>不生成包含暴力、色情、仇恨言论或其他有害内容的材料</li>
-              <li><strong>知识产权：</strong>尊重他人知识产权，不侵犯版权或商标权</li>
-              <li><strong>平台安全：</strong>不尝试破坏、入侵或干扰平台正常运行</li>
-              <li><strong>公平使用：</strong>合理使用服务，不进行过度或滥用行为</li>
+              <li data-i18n="termsSection11Item1"></li>
+              <li data-i18n="termsSection11Item2"></li>
+              <li data-i18n="termsSection11Item3"></li>
             </ul>
           </section>
 
           <section>
-            <h2>5. 禁止行为</h2>
-            <p>严禁以下行为：</p>
+            <h2 data-i18n="termsSection12Title">12. 终止服务</h2>
+            <p data-i18n="termsSection12Intro"></p>
             <ul>
-              <li>生成或传播非法、淫秽、暴力或仇恨内容</li>
-              <li>侵犯他人隐私权、肖像权或知识产权</li>
-              <li>进行网络攻击、数据窃取或系统破坏</li>
-              <li>滥用服务进行商业竞争或恶意行为</li>
-              <li>绕过技术限制或进行逆向工程</li>
-              <li>散布虚假信息或误导性内容</li>
-              <li>使用自动化工具进行大规模生成</li>
+              <li data-i18n="termsSection12Item1"></li>
+              <li data-i18n="termsSection12Item2"></li>
+              <li data-i18n="termsSection12Item3"></li>
+              <li data-i18n="termsSection12Item4"></li>
+              <li data-i18n="termsSection12Item5"></li>
             </ul>
           </section>
 
           <section>
-            <h2>6. 内容所有权</h2>
-            <p>关于生成内容的权利：</p>
+            <h2 data-i18n="termsSection13Title">13. 适用法律</h2>
+            <p data-i18n="termsSection13Intro"></p>
             <ul>
-              <li><strong>用户生成内容：</strong>您对使用本平台生成的内容享有完整的所有权</li>
-              <li><strong>商业使用：</strong>您可以自由地将生成内容用于商业和个人目的</li>
-              <li><strong>平台权利：</strong>我们保留对平台技术、界面和品牌的所有权利</li>
+              <li data-i18n="termsSection13Item1"></li>
+              <li data-i18n="termsSection13Item2"></li>
+              <li data-i18n="termsSection13Item3"></li>
+            </ul>
+          </section>
+
+          <section>
+            <h2 data-i18n="termsSection14Title">14. 联系我们</h2>
+            <p data-i18n="termsSection14Intro"></p>
+            <ul>
+              <li data-i18n="termsSection14Item1"></li>
               <li>
-                <strong>第三方内容：</strong>平台可能包含第三方提供的内容，其版权归原权利人所有
+                <span data-i18n="termsSection14Item2"></span>
+                （<a href="contact.html" data-i18n="contactUs">联系我们</a>）
               </li>
             </ul>
           </section>
 
           <section>
-            <h2>7. 服务可用性</h2>
-            <p>关于服务提供：</p>
-            <ul>
-              <li><strong>免费服务：</strong>本平台目前提供永久免费服务</li>
-              <li><strong>服务中断：</strong>我们可能因维护、技术问题或其他原因暂时中断服务</li>
-              <li><strong>功能变更：</strong>我们保留随时修改或终止服务的权利</li>
-              <li><strong>无保证：</strong>我们不保证服务100%可用或无错误</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>8. 隐私保护</h2>
-            <p>我们重视您的隐私：</p>
-            <ul>
-              <li><strong>数据收集：</strong>我们仅收集必要的信息来提供服务</li>
-              <li><strong>数据使用：</strong>收集的信息仅用于改善服务和用户体验</li>
-              <li><strong>数据安全：</strong>我们采用适当的技术和组织措施保护您的数据</li>
-              <li><strong>数据保留：</strong>我们不会长期存储用户生成的原始内容</li>
-            </ul>
-            <p>详细的隐私政策请参见：<a href="privacy.html">隐私政策</a></p>
-          </section>
-
-          <section>
-            <h2>9. 免责声明</h2>
-            <p>请注意以下重要免责事项：</p>
-            <ul>
-              <li><strong>服务按现状提供：</strong>我们不保证服务的准确性、可靠性或适用性</li>
-              <li><strong>AI生成内容：</strong>AI生成的内容可能包含不准确或不适当的信息</li>
-              <li><strong>第三方服务：</strong>我们不对第三方服务的可用性或内容负责</li>
-              <li><strong>使用风险：</strong>您对使用生成内容承担全部责任</li>
-              <li><strong>技术限制：</strong>AI技术存在固有限制，可能无法满足所有需求</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>10. 责任限制</h2>
-            <p>在法律允许的最大范围内，我们不对以下情况承担责任：</p>
-            <ul>
-              <li>服务中断、数据丢失或功能故障</li>
-              <li>AI生成内容的质量或准确性问题</li>
-              <li>第三方侵权或法律纠纷</li>
-              <li>用户因使用服务遭受的间接或后果性损失</li>
-              <li>不可抗力事件导致的服务中断</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>11. 条款变更</h2>
-            <p>我们保留随时修改本使用条款的权利：</p>
-            <ul>
-              <li><strong>变更通知：</strong>重大变更将通过网站公告或邮件通知</li>
-              <li><strong>继续使用：</strong>继续使用服务即表示接受新条款</li>
-              <li><strong>历史版本：</strong>我们会保留条款的历史版本供查阅</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>12. 终止服务</h2>
-            <p>在以下情况下，我们可能终止或限制您的服务：</p>
-            <ul>
-              <li>违反本使用条款</li>
-              <li>进行违法或不当活动</li>
-              <li>对平台造成安全威胁</li>
-              <li>账户长期未使用</li>
-              <li>技术或业务原因需要终止</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>13. 适用法律</h2>
-            <p>本使用条款受中华人民共和国法律管辖：</p>
-            <ul>
-              <li><strong>管辖法院：</strong>如发生争议，将在中国大陆法院诉讼</li>
-              <li><strong>法律适用：</strong>适用中华人民共和国法律</li>
-              <li><strong>争议解决：</strong>鼓励友好协商解决争议</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>14. 联系我们</h2>
-            <p>如果您对本使用条款有任何疑问或需要帮助，请通过以下方式联系我们：</p>
-            <ul>
-              <li>邮箱：legal@aistone.org</li>
-              <li>网站：<a href="contact.html">联系我们页面</a></li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>15. 生效日期</h2>
-            <p>本使用条款于2025年1月1日生效，并取代之前的所有版本。</p>
+            <h2 data-i18n="termsSection15Title">15. 生效日期</h2>
+            <p data-i18n="termsSection15Intro"></p>
           </section>
 
           <!-- AdSense 广告位 -->
@@ -237,9 +247,9 @@
       <div class="container">
         <p>&copy; 2025 AISTONE. 保留所有权利。</p>
         <div class="footer-links">
-          <a href="privacy.html">隐私政策</a>
-          <a href="terms.html">使用条款</a>
-          <a href="contact.html">联系我们</a>
+          <a href="privacy.html" data-i18n="privacyPolicy">隐私政策</a>
+          <a href="terms.html" data-i18n="termsOfService">使用条款</a>
+          <a href="contact.html" data-i18n="contactUs">联系我们</a>
         </div>
       </div>
     </footer>
