--- a/frontend/terms.html
+++ b/frontend/terms.html
@@ -328,5 +328,8 @@
         text-decoration: underline;
       }
     </style>
+
+    <!-- 启用多语言渲染 -->
+    <script src="js/i18n.js?v=20250924"></script>
   </body>
 </html>
