--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -189,7 +189,7 @@
 
     <footer>
       <div class="container">
-        <p>&copy; 2024 AISTONE. 保留所有权利。</p>
+        <p data-i18n="footerCopyrightFull">&copy; 2024 AISTONE. 保留所有权利。</p>
         <div class="footer-links">
           <a href="privacy.html" data-i18n="privacyPolicy">隐私政策</a>
           <a href="terms.html" data-i18n="termsOfService">使用条款</a>
