fix(contact): footer copyright use i18n footerCopyrightFull and load i18n with version

--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -210,7 +210,9 @@
     </div>
     <footer id="contact">
       <div class="footer-grid">
-        <div class="footer-left" data-i18n="footerCopyright">&copy; 2025 AISTONE</div>
+        <div class="footer-left" data-i18n="footerCopyrightFull">
+          &copy; 2025 AISTONE. 保留所有权利。
+        </div>
         <div class="footer-center">
           <a href="#" class="footer-icon" aria-label="Twitter"
             ><svg width="28" height="28" fill="none" viewBox="0 0 24 24">
@@ -240,7 +242,7 @@
         </div>
       </div>
     </footer>
-    <script src="js/i18n.js"></script>
+    <script src="js/i18n.js?v=20250924"></script>
     <script src="js/ui_handler.js" defer></script>
     <script src="js/auth_modals.js" defer></script>
     <div id="auth-modals"></div>
