--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -49,9 +49,9 @@
     <div class="container">
       <!-- 面包屑导航 -->
       <nav class="breadcrumb">
-        <a href="/">首页</a>
+        <a href="/" data-i18n="breadcrumbHome">首页</a>
         <span class="separator">></span>
-        <span class="current">联系我们</span>
+        <span class="current" data-i18n="contactModalTitle">联系我们</span>
       </nav>
       <main>
         <section class="contact-section" id="contact">
