fix(footer links): replace placeholder footerLinks with real privacy.html and terms.html across subpages

--- a/frontend/prompt-engineering.html
+++ b/frontend/prompt-engineering.html
@@ -1260,8 +1260,8 @@
           ></a>
         </div>
         <div class="footer-right">
-          <a href="#" class="footer-link" data-i18n="footerLinks.0.text">隐私政策</a><br />
-          <a href="#" class="footer-link" data-i18n="footerLinks.1.text">服务条款</a><br />
+          <a href="privacy.html" class="footer-link" data-i18n="privacyPolicy">隐私政策</a><br />
+          <a href="terms.html" class="footer-link" data-i18n="termsOfService">服务条款</a><br />
         </div>
       </div>
     </footer>
