--- a/frontend/blog.html
+++ b/frontend/blog.html
@@ -1117,16 +1117,17 @@
     <style>
       /* 博客专用样式 */
       .blog-hero {
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        color: white;
-        padding: 4rem 0;
+        background: linear-gradient(135deg, #1a1f2e 0%, #101522 100%);
+        color: var(--color-surface-on-light-white, #fff);
+        padding: 3.5rem 0;
         text-align: center;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.06);
       }
 
       .blog-categories {
-        padding: 2rem 0;
-        background: #f8fafc;
-        border-bottom: 1px solid #e2e8f0;
+        padding: 0.9rem 0;
+        background: #0e1320;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.06);
       }
 
       .categories-nav {
@@ -1137,11 +1138,11 @@
       }
 
       .category-btn {
-        padding: 0.5rem 1rem;
-        border: none;
-        background: white;
-        color: #64748b;
-        border-radius: 0.5rem;
+        padding: 8px 14px;
+        border-radius: 999px;
+        border: 1px solid rgba(255, 255, 255, 0.12);
+        background: transparent;
+        color: #dce6ff;
         cursor: pointer;
         transition: all 0.3s ease;
         font-weight: 500;
@@ -1153,35 +1154,39 @@
       }
 
       .category-btn.active {
-        background: #4f46e5;
-        color: white;
+        background: var(--color-brand-primary, #00cfff);
+        color: #0e1320;
+        border-color: transparent;
       }
 
       .blog-articles {
-        padding: 3rem 0;
+        padding: 32px 0 60px;
+        background: #0b0f1c;
       }
 
       .articles-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-        gap: 2rem;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: 22px;
         max-width: 1200px;
         margin: 0 auto;
       }
 
       .article-card {
-        background: white;
-        border-radius: 1rem;
-        padding: 1.5rem;
-        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+        background: #0f1526;
+        border: 1px solid rgba(255, 255, 255, 0.08);
+        border-radius: 12px;
+        padding: 18px;
         transition:
-          transform 0.3s ease,
-          box-shadow 0.3s ease;
+          transform 0.2s ease,
+          box-shadow 0.2s ease,
+          border-color 0.2s ease;
       }
 
       .article-card:hover {
         transform: translateY(-2px);
-        box-shadow: 0 10px 25px -3px rgba(0, 0, 0, 0.1);
+        border-color: var(--color-brand-primary, #00cfff);
+        box-shadow: 0 8px 24px rgba(0, 207, 255, 0.08);
       }
 
       .article-header {
@@ -1213,18 +1218,18 @@
       }
 
       .article-title a {
-        color: #1e293b;
+        color: #e9efff;
         text-decoration: none;
         transition: color 0.3s ease;
       }
 
       .article-title a:hover {
-        color: #4f46e5;
+        color: var(--color-brand-primary, #00cfff);
       }
 
       .article-excerpt {
-        color: #64748b;
-        line-height: 1.6;
+        color: #aab4d4;
+        line-height: 1.7;
         margin-bottom: 1rem;
       }
 
