--- a/frontend/image-generator.html
+++ b/frontend/image-generator.html
@@ -540,8 +540,8 @@
             ></a>
           </div>
           <div class="footer-right">
-            <a href="privacy.html" class="footer-link">隐私政策</a><br />
-            <a href="terms.html" class="footer-link">服务条款</a><br />
+            <a href="privacy.html" class="footer-link" data-i18n="privacyPolicy">隐私政策</a><br />
+            <a href="terms.html" class="footer-link" data-i18n="termsOfService">服务条款</a><br />
           </div>
         </div>
       </footer>
