style(blog): improve readability on dark cards (badge/tag colors)

--- a/frontend/blog.html
+++ b/frontend/blog.html
@@ -1197,12 +1197,13 @@
       }
 
       .article-category {
-        background: #e0f2fe;
-        color: #0369a1;
+        background: rgba(0, 207, 255, 0.12);
+        color: var(--color-brand-primary, #00cfff);
         padding: 0.25rem 0.75rem;
         border-radius: 1rem;
         font-size: 0.875rem;
         font-weight: 500;
+        border: 1px solid rgba(0, 207, 255, 0.25);
       }
 
       .article-date {
@@ -1253,11 +1254,12 @@
       }
 
       .tag {
-        background: #f1f5f9;
-        color: #475569;
+        background: #0b1324;
+        color: #aab4d4;
         padding: 0.25rem 0.5rem;
         border-radius: 0.25rem;
         font-size: 0.75rem;
+        border: 1px solid rgba(255, 255, 255, 0.08);
       }
 
       /* 文章模态框样式 */
