feat(blog): replace modal articles with standalone pages; update links; unify footer

--- a/frontend/blog.html
+++ b/frontend/blog.html
@@ -164,13 +164,7 @@
                 <time class="article-date">2025年9月</time>
               </div>
               <h2 class="article-title">
-                <a
-                  href="#article-ai-guide"
-                  onclick="showArticle('ai-guide')"
-                  data-i18n="aiGuideTitle"
-                >
-                  AI图像生成完整指南
-                </a>
+                <a href="blog_ai_guide.html" data-i18n="aiGuideTitle">AI图像生成完整指南</a>
               </h2>
               <p class="article-excerpt" data-i18n="aiGuideExcerpt">
                 从基础理论到实战技巧，深入了解扩散模型、FLUX、Stable
@@ -193,13 +187,9 @@
                 <time class="article-date">2025年9月</time>
               </div>
               <h2 class="article-title">
-                <a
-                  href="#article-prompt-engineering"
-                  onclick="showArticle('prompt-engineering')"
-                  data-i18n="promptEngineeringTitle"
+                <a href="blog_prompt_engineering.html" data-i18n="promptEngineeringTitle"
+                  >提示词工程专业教程</a
                 >
-                  提示词工程专业教程
-                </a>
               </h2>
               <p class="article-excerpt" data-i18n="promptEngineeringExcerpt">
                 掌握AI图像生成的核心技能，从基础语法到高级策略，学会权重控制、负面提示词和风格融合...
@@ -221,13 +211,7 @@
                 <time class="article-date">2025年9月</time>
               </div>
               <h2 class="article-title">
-                <a
-                  href="#article-tutorial"
-                  onclick="showArticle('tutorial')"
-                  data-i18n="tutorialTitle"
-                >
-                  AISTONE平台使用教程
-                </a>
+                <a href="blog_tutorial.html" data-i18n="tutorialTitle">AISTONE平台使用教程</a>
               </h2>
               <p class="article-excerpt" data-i18n="tutorialExcerpt">
                 快速上手AISTONE平台，学会图像生成、语音合成的基本操作，掌握各种参数设置和优化技巧...
@@ -249,9 +233,7 @@
                 <time class="article-date">2025年9月</time>
               </div>
               <h2 class="article-title">
-                <a href="#article-faq" onclick="showArticle('faq')" data-i18n="faqTitle">
-                  常见问题解答
-                </a>
+                <a href="blog_faq.html" data-i18n="faqTitle">常见问题解答</a>
               </h2>
               <p class="article-excerpt" data-i18n="faqExcerpt">
                 汇总平台使用过程中的常见问题和解决方案，包括账号管理、生成失败、质量优化等实用建议...
@@ -269,17 +251,7 @@
         </div>
       </section>
 
-      <!-- 文章内容模态框 -->
-      <div id="article-modal" class="article-modal" style="display: none">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button class="modal-close" onclick="closeArticleModal()">&times;</button>
-          </div>
-          <div class="modal-body">
-            <div id="article-content"></div>
-          </div>
-        </div>
-      </div>
+      <!-- 文章内容模态框移除，改为独立详情页 -->
     </main>
 
     <!-- 页脚 -->
